examples/fail/call_arg_type_mismatch.hax
module ZZZ::CallArgTypeMismatch;

sub f(Int $a, Bool $b) -> Int { return $a; }

sub main() -> Int {
  return f(true, 1);
}
